# quiz-chatbot-tg

./: .config  .pylintrc  Pipfile  README.md  app.py  botclass.py  messages.json  pyproject.toml  reply.py  requirements.txt  telebot.py
bot/: __init__.py  backend.py  config.py  messages.json  reply.py  request_type.py  user.py
